--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.LoginActivity" />
-        <activity android:name=".ui.activities.CreateAccountActivity" />
-        <activity android:name=".ui.activities.ForgotPassActivity" />
+        <activity android:name=".ui.activities.LoginActivity"
+            android:windowSoftInputMode="adjustPan"/>
+         <activity android:name=".ui.activities.ForgotPassActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -47,6 +47,7 @@
             android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".ui.activities.EditProfileActivity"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme"></activity>
 
 
