--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <uses-feature android:name="android.hardware.camera"></uses-feature>
 
         <activity android:name=".SplashActivity">
             <intent-filter>
@@ -24,7 +25,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activities.LoginActivity"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"
+
+            />
          <activity android:name=".ui.activities.ForgotPassActivity" />
 
         <meta-data
@@ -48,8 +53,14 @@
         <activity
             android:name=".ui.activities.EditProfileActivity"
             android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme"></activity>
 
+        <activity
+            android:name=".ui.activities.CreateAccountActivity"
+            android:theme="@style/AppTheme"
+            android:configChanges="orientation|screenSize"/>
 
         <service
             android:name=".notification.MyFirebaseInstanceIDService">
