--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
             android:theme="@style/AppTheme"></activity>
 
         <activity
-            android:name=".ui.activities.CreateAccountActivity"
+            android:name=".ui.activities.ConfirmServiceActivity"
             android:theme="@style/AppTheme"
             android:configChanges="orientation|screenSize"/>
 
