--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -17,13 +15,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_debug_key" />
 
-        <uses-feature android:name="android.hardware.camera"></uses-feature>
+        <uses-feature android:name="android.hardware.camera" />
 
         <activity android:name=".SplashActivity">
             <intent-filter>
@@ -32,13 +28,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.LoginActivity"
-            android:windowSoftInputMode="adjustPan"
+        <activity
+            android:name=".ui.activities.LoginActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
-
-            />
-         <activity android:name=".ui.activities.ForgotPassActivity" />
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".ui.activities.ForgotPassActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -57,32 +52,30 @@
         <activity
             android:name=".ui.activities.BookServiceActivity"
             android:label="@string/title_activity_book_service"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.activities.EditProfileActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/AppTheme"></activity>
-
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.activities.ConfirmServiceActivity"
-            android:theme="@style/AppTheme"
-            android:configChanges="orientation|screenSize"/>
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/AppTheme" />
 
-        <service
-            android:name=".notification.MyFirebaseInstanceIDService">
+        <service android:name=".notification.MyFirebaseInstanceIDService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".notification.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <service
-            android:name=".notification.MyFirebaseMessagingService">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-            </intent-filter>
-        </service>
+        <activity android:name=".ui.activities.CardListActivity"></activity>
     </application>
 
 </manifest>
