--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'id.zelory:compressor:1.0.4'
     testCompile 'junit:junit:4.12'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.wdullaer:materialdatetimepicker:3.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
