--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,11 @@ dependencies {
 
 }
 apply plugin: 'com.google.gms.google-services'
+dependencies {
+    compile 'com.android.support:support-v4:24.+'
+}
+dependencies {
+    compile 'com.android.support:support-v4:24.+'
+}
 
 
