Enless scrolling in records and schedule screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,8 @@ dependencies {
 dependencies {
     compile 'com.android.support:support-v4:24.+'
 }
+dependencies {
+    compile 'com.android.support:support-v4:24.+'
+}
 
 
