--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
             android:value="@string/map_debug_key" />
 
         <uses-feature android:name="android.hardware.camera" />
+        <!-- Needed only if your app targets Android 5.0 (API level 21) or higher. -->
+        <uses-feature android:name="android.hardware.location.gps" />
 
         <activity android:name=".SplashActivity">
             <intent-filter>
