Package for login driver

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,9 @@ dependencies {
 
 }
 apply plugin: 'com.google.gms.google-services'
+dependencies {
+    compile 'com.android.support:support-v4:24.+'
+}
 
 
 
