--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ dependencies {
     }
 }
 
+allprojects {
+    repositories {
+
+        maven { url "https://jitpack.io" }
+    }
+}
 
 
 
@@ -63,8 +69,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+
+    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.android.support:support-v4:24.2.1'
@@ -76,6 +82,7 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.wdullaer:materialdatetimepicker:3.1.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.mukeshsolanki:country-picker-android:1.1.7'
 
 
 }
