Driver navigation screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,9 @@ apply plugin: 'com.google.gms.google-services'
 dependencies {
     compile 'com.android.support:support-v4:24.+'
 }
+dependencies {
+    compile 'com.android.support:support-v4:24.+'
+}
 
 
 
