Added some UI for driver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,9 @@
         <activity
             android:name=".ui.driver.activities.DriverNavigationActivity"
             android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".ui.driver.activities.DriverEditprofileActivity"
+            android:theme="@style/AppTheme"/>
 
         <!--
             <intent-filter>
