--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true
     }
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'
 }
 
 allprojects {
@@ -33,7 +35,7 @@ allprojects {
 
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.hoffmans.rush"
@@ -61,8 +63,7 @@ dependencies {
     // JSON Converter
 
     compile 'com.google.firebase:firebase-messaging:10.0.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
@@ -73,7 +74,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.github.bumptech.glide:glide:3.6.0'
-    compile 'com.android.support:support-v4:24.2.1'
+
     compile 'com.braintreepayments.api:braintree:2.+'
 
     compile 'com.braintreepayments.gateway:braintree-java:2.53.0'
@@ -83,11 +84,12 @@ dependencies {
     compile 'com.wdullaer:materialdatetimepicker:3.1.0'
     testCompile 'junit:junit:4.12'
     compile 'com.github.mukeshsolanki:country-picker-android:1.1.7'
+    compile 'com.android.support:multidex:1.0.1'
 
 
 }
 apply plugin: 'com.google.gms.google-services'
-dependencies {
+/*dependencies {
     compile 'com.android.support:support-v4:24.+'
 }
 dependencies {
@@ -98,6 +100,8 @@ dependencies {
 }
 dependencies {
     compile 'com.android.support:support-v4:24.+'
+}*/ dependencies {
+    compile 'com.android.support.constraint:constraint-layout:+'
 }
 
 
