marker drag on google map , location marker update

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,12 @@ dependencies {
 }*/ dependencies {
     compile 'com.android.support.constraint:constraint-layout:+'
 }
+dependencies {
+    compile 'com.android.support.constraint:constraint-layout:+'
+}
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
 
 
 
