--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.github.mukeshsolanki:country-picker-android:1.1.7'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.karumi:headerrecyclerview:1.1.0'
 
 
 }
