--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -156,6 +156,7 @@
         <activity
             android:name=".ui.driver.activities.UpcomingActivity"
             android:label="@string/title_activity_upcoming"
+            android:launchMode="singleTask"
             android:theme="@style/AppTheme" />
 
         <service
