--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.karumi:headerrecyclerview:1.1.0'
 
+    compile 'com.android.support:support-annotations:24.2.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
